# user-service/openapi.json
@@ -688,6 +688,16 @@
             "cookieAuth": []
           }
         ],
+        "parameters": [
+          {
+            "name": "deviceId",
+            "in": "query",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
         "responses": {
           "200": {
             "description": "Stored keys",
